# dev-to-dev

./: Dockerfile  README.md  pyproject.toml
demo_project/: package.json  requirements.txt  sample_app.py
src/: __init__.py  server.py
src/tools/: __init__.py  deps_check.py  tech_debt.py
src/utils/: file_scanner.py
